--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <img class="basket__vector" src="./images/basket__vector.svg" />
         </div>
         <div class="basket__number">
-          <p class="basket__number-value">0</p>
+          <p class="basket__number-value"></p>
         </div>
       </div>
       <hr />
@@ -53,24 +53,41 @@
         <div class="info__quantity">
           <p class="info__quantity--stock text--overline"></p>
           <div class="info__quantity--controls">
-            <button type="button" class="controls__button">
-              <img class="controls__button--minus">
-              <!-- <img
-                class="controls__button--minus"
-                alt="clickable minus symbol"
-                src="./images/minus-button.svg"
-              /> -->
+            <button
+              type="button"
+              class="controls__button controls__button--minus"
+            >
+              <svg
+                width="14"
+                height="2"
+                viewBox="0 0 14 2"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path id="minusSVG" d="M14 2H0V0H14V2Z" fill="#3f51b5" />
+              </svg>
             </button>
-            <p class="controls--number"></p>
-            <button type="button" class="button-w-icon controls__button">
-              <img
-                class="controls__button--plus"
-                alt="clickable plus symbol"
-                src="./images/plus-button.svg"
-              />
+            <p class="controls__number text--body">1</p>
+            <button
+              type="button"
+              class="button-w-icon controls__button controls__button--plus"
+            >
+              <svg
+                width="14"
+                height="14"
+                viewBox="0 0 14 14"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  id="plusSVG"
+                  d="M14 8H8V14H6V8H0V6H6V0H8V6H14V8Z"
+                  fill="#3F51B5"
+                />
+              </svg>
             </button>
           </div>
-          <button type="button" class="add-button button-w-text text--button">
+          <button type="submit" class="add-button button-w-text text--button">
             Add to basket
           </button>
         </div>
