--- a/index.html
+++ b/index.html
@@ -12,15 +12,14 @@
   <body>
     <header>
       <div class="title text--headline-2">
-        <p class="title__brand-name">SOON_</p>
-        <p class="title__challenge-name">Basket App</p>
+        <p class="title__brand-name flex-none">SOON_</p>
+        <p class="title__challenge-name flex-none">Basket App</p>
       </div>
-      <p class="header__0 text--body"></p>
       <div class="basket">
         <div class="basket__container">
           <img class="basket__vector" src="./images/basket__vector.svg" />
         </div>
-        <div class="basket__number">
+        <div class="basket__number flex-none">
           <p class="basket__number-value"></p>
         </div>
       </div>
@@ -34,11 +33,11 @@
         alt="Waxed Cotton Hooded Jacket catalogue example"
       />
       <div class="info">
-        <div class="info__details">
-          <p class="info__details--name text--headline-1">
+        <div class="info__details flex-none">
+          <p class="info__details--name flex-none text--headline-1">
             Waxed Cotton Hooded Jacket
           </p>
-          <p class="info__details--description text--body">
+          <p class="info__details--description flex-none text--body">
             The Drumming jacket in orange is finished with a water-repellent dry
             wax treatment that creates a love-worn look. It's made in the United
             Kingdom using organic cotton ripstop with a drawstring hood,
@@ -48,14 +47,14 @@
             of the collection's padded liners to the internal tab on cooler
             days.
           </p>
-          <p class="info__details--cost text--body">£650.00</p>
+          <p class="info__details--cost flex-none text--body">£650.00</p>
         </div>
-        <div class="info__quantity">
-          <p class="info__quantity--stock text--overline"></p>
-          <div class="info__quantity--controls">
+        <div class="info__quantity flex-none">
+          <p class="info__quantity--stock flex-none text--overline"></p>
+          <div class="info__quantity--controls flex-none">
             <button
               type="button"
-              class="controls__button controls__button--minus"
+              class="controls__button flex-none controls__button--minus"
             >
               <svg
                 width="14"
@@ -67,7 +66,7 @@
                 <path id="minusSVG" d="M14 2H0V0H14V2Z" fill="#3f51b5" />
               </svg>
             </button>
-            <p class="controls__number text--body">1</p>
+            <p class="controls__number flex-none text--body">1</p>
             <button
               type="button"
               class="button-w-icon controls__button controls__button--plus"
@@ -87,7 +86,7 @@
               </svg>
             </button>
           </div>
-          <button type="submit" class="add-button button-w-text text--button">
+          <button type="submit" class="add-button button-w-text flex-none text--button">
             Add to basket
           </button>
         </div>
